# fastapi-microservice

./: LICENSE  README.md  docker-compose.yml  nginx_config.conf
cast-service/: pyproject.toml
cast-service/app/api/: db.py
movie-service/: pyproject.toml
movie-service/app/api/: db_manager.py  movies.py
