[tool.poetry]
name = "cast-service"
version = "0.1.0"
description = "A FastAPI-based cast service"
authors = ["Pratyush Nanda <precizne.void@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "0.20.1"
databases = {extras = ["postgresql"], version = "0.2.6"}
fastapi = "0.48.0"
SQLAlchemy = "1.3.13"
uvicorn = "0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
